# task_solver

./: CMakeLists.txt  build_solution.bat
include/: InputKeysHolder.h  TaskSolver.h
qml/: QMButton.qml  QMConst.qml  QMTextField.qml  TaskInput.qml  TaskMultilineInput.qml  main.qml
src/: InputKeysHolder.cpp  TaskSolver.cpp  main.cpp  qml.qrc
